# nice_app_test

./: .dockerignore  .gitignore  compose.yaml  pyproject.toml
docker/app/: Dockerfile
docs/: UI_SPECIFICATION.md
src/: main.py
src/core/: __init__.py  config.py  kfile_parser.py  mesh_part_extractor.py  tool.py  workpiece.py
src/core/boundaries/: __init__.py  enums.py  motion.py
src/core/common/: __init__.py  direction.py
src/core/contacts/: __init__.py  contact.py  generator.py
src/core/curves/: __init__.py  generators.py
src/core/export/: __init__.py  boundary_generator.py  control_templates.py  database_templates.py  deck_generator.py  id_manager.py  mesh_converter.py
src/core/materials/: __init__.py  elastic_plastic.py  generator.py  rigid.py  sscurve_loader.py
src/services/: export_service.py
src/state/: __init__.py  analysis.py  constraints.py  friction.py  materials.py  meshes.py  parts.py  steps.py  symmetry.py
src/views/components/: __init__.py  export_section.py  global_settings.py  step_manager.py  tool_card.py  workpiece_card.py
src/views/pages/: home.py
